--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -2,6 +2,7 @@ version: v1
 name: buf.build/realiotech/realio-network
 deps:
   - buf.build/cosmos/gogo-proto
+  - buf.build/cosmos/cosmos-proto
   - buf.build/googleapis/googleapis
 breaking:
   use:
